--- a/spec/runner.html
+++ b/spec/runner.html
@@ -47,6 +47,7 @@
         <script type="text/javascript" src="defaultBindings/htmlBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/ifBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/ifnotBehaviors.js"></script>
+        <script type="text/javascript" src="defaultBindings/letBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/optionsBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/selectedOptionsBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/styleBehaviors.js"></script>
@@ -56,6 +57,7 @@
         <script type="text/javascript" src="defaultBindings/valueBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/visibleBehaviors.js"></script>
         <script type="text/javascript" src="defaultBindings/withBehaviors.js"></script>
+        <script type="text/javascript" src="defaultBindings/withlightBehaviors.js"></script>
     </head>
     <body>
         <div style="display:none;"><p>A</p><p>B</p></div>
