--- a/spec/runner-min.html
+++ b/spec/runner-min.html
@@ -1,22 +1,34 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.1//EN" "http://www.w3.org/TR/xhtml11/DTD/xhtml11.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
-        <title>JSSpec results</title>
-        <link rel="stylesheet" type="text/css" href="lib/JSSpec.css" />
 
         <!-- All specs should pass with or without jQuery+Modernizr being referenced -->
         <!--
-        <script type="text/javascript" src="http://code.jquery.com/jquery-1.7.1.js"></script>
+        <script type="text/javascript" src="http://code.jquery.com/jquery-1.8.2.js"></script>
         <script type="text/javascript" src="http://ajax.aspnetcdn.com/ajax/modernizr/modernizr-1.7-development-only.js"></script>
         -->
 
-        <script type="text/javascript" src="lib/innershiv.js"></script>
-        <script type="text/javascript" src="lib/diff_match_patch.js"></script>
-        <script type="text/javascript" src="lib/JSSpec.js"></script>
-        <script type="text/javascript" src="lib/JSSpec.extensions.js"></script>
-        <script type="text/javascript" src="lib/json2.js"></script>
-        <script type="text/javascript" src="../build/output/knockout-latest.js"></script>
+        <!-- jasmine -->
+        <link rel="stylesheet" type="text/css" href="lib/jasmine-1.2.0/jasmine.css" />
+        <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine.js"></script>
+        <script type="text/javascript" src="lib/jasmine-1.2.0/jasmine-html.js"></script>
 
+        <!-- our jasmine extensions -->
+        <link rel="stylesheet" type="text/css" href="lib/jasmine.extensions.css" />
+        <script type="text/javascript" src="lib/jasmine.extensions.js"></script>
+
+        <!-- knockout polyfills -->
+        <script type="text/javascript" src="lib/innershiv.js"></script>
+        <script type="text/javascript" src="lib/json2.js"></script>
+
+        <!-- knockout -->
+        <script type="text/javascript">
+            // An external runner, such as PhantomJS, can prepopulate window.koFilename (e.g., to run tests against the minified build)
+            jasmine.addScriptReference(window.koFilename || "../build/output/knockout-latest.js");
+        </script>
+
+        <!-- specs -->
+        <script type="text/javascript" src="asyncBehaviors.js"></script>
         <script type="text/javascript" src="memoizationBehaviors.js"></script>
         <script type="text/javascript" src="subscribableBehaviors.js"></script>
         <script type="text/javascript" src="observableBehaviors.js"></script>
@@ -56,6 +68,18 @@
         <script type="text/javascript" src="defaultBindings/withlightBehaviors.js"></script>
     </head>
     <body>
-        <div style="display:none;"><p>A</p><p>B</p></div>
+        <script type="text/javascript">
+          (function() {
+            var jasmineEnv = jasmine.getEnv();
+            jasmineEnv.updateInterval = 500;
+
+            var htmlReporter = new jasmine.HtmlReporter();
+            jasmineEnv.addReporter(htmlReporter);
+            jasmineEnv.specFilter = htmlReporter.specFilter;
+
+            jasmineEnv.execute();
+
+          })();
+        </script>
     </body>
 </html>
