--- a/spec/runner-min.html
+++ b/spec/runner-min.html
@@ -23,25 +23,34 @@
 
         <!-- knockout -->
         <script type="text/javascript">
-            // An external runner, such as PhantomJS, can prepopulate window.koFilename (e.g., to run tests against the minified build)
-            jasmine.addScriptReference(window.koFilename || "../build/output/knockout-latest.js");
+            // By default, we run the tests against knockout-raw.js, but you can specify an alternative test
+            // subject as a querystring parameter, e.g., runner.html?src=build/output/knockout-latest.js.
+            // This is used by our automated test runners (PhantomJS and Testling CI).
+            (function() {
+                var koFilenameParam = location.href.match(/[?&]src=([^&]+)/);
+                jasmine.addScriptReference("../" + (koFilenameParam ? koFilenameParam[1] : "build/output/knockout-latest.js"));
+            })();
         </script>
 
         <!-- specs -->
+        <script type="text/javascript" src="arrayEditDetectionBehaviors.js"></script>
+        <script type="text/javascript" src="arrayToDomEditDetectionBehaviors.js"></script>
         <script type="text/javascript" src="asyncBehaviors.js"></script>
         <script type="text/javascript" src="memoizationBehaviors.js"></script>
         <script type="text/javascript" src="subscribableBehaviors.js"></script>
         <script type="text/javascript" src="observableBehaviors.js"></script>
         <script type="text/javascript" src="observableArrayBehaviors.js"></script>
         <script type="text/javascript" src="dependentObservableBehaviors.js"></script>
+        <script type="text/javascript" src="dependentObservableDomBehaviors.js"></script>
         <script type="text/javascript" src="extenderBehaviors.js"></script>
         <script type="text/javascript" src="domNodeDisposalBehaviors.js"></script>
         <script type="text/javascript" src="mappingHelperBehaviors.js"></script>
         <script type="text/javascript" src="bindingAttributeBehaviors.js"></script>
+        <script type="text/javascript" src="bindingDependencyBehaviors.js"></script>
         <script type="text/javascript" src="templatingBehaviors.js"></script>
-        <script type="text/javascript" src="editDetectionBehaviors.js"></script>
         <script type="text/javascript" src="jsonPostingBehaviors.js"></script>
         <script type="text/javascript" src="nativeTemplateEngineBehaviors.js"></script>
+        <script type="text/javascript" src="utilsBehaviors.js"></script>
 
         <!-- Default bindings -->
         <script type="text/javascript" src="defaultBindings/attrBehaviors.js"></script>
@@ -78,7 +87,6 @@
             jasmineEnv.specFilter = htmlReporter.specFilter;
 
             jasmineEnv.execute();
-
           })();
         </script>
     </body>
