add support for deferred updates

--- a/spec/runner.html
+++ b/spec/runner.html
@@ -31,7 +31,10 @@
             })();
         </script>
 
+        <script type="text/javascript">ko.computed.deferUpdates = true;</script>
+
         <!-- specs -->
+        <script type="text/javascript" src="taskBehaviors.js"></script>
         <script type="text/javascript" src="arrayEditDetectionBehaviors.js"></script>
         <script type="text/javascript" src="arrayToDomEditDetectionBehaviors.js"></script>
         <script type="text/javascript" src="asyncBehaviors.js"></script>
@@ -43,6 +46,7 @@
         <script type="text/javascript" src="dependentObservableBehaviors.js"></script>
         <script type="text/javascript" src="dependentObservableDomBehaviors.js"></script>
         <script type="text/javascript" src="extenderBehaviors.js"></script>
+        <script type="text/javascript" src="deferredUpdatesBehaviors.js"></script>
         <script type="text/javascript" src="domNodeDisposalBehaviors.js"></script>
         <script type="text/javascript" src="mappingHelperBehaviors.js"></script>
         <script type="text/javascript" src="expressionRewritingBehaviors.js"></script>
